UpgradeUI+UX and User's flow